--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keyword" content="Portfolio">
     <meta name="author" content="Çamay Duran">
     <meta name="author" content="İhsan Güldür">
+    <meta name=description content="Portföy çalışması">
     <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -24,22 +25,20 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portföy</title>
-
     <!-- AOS LIB -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
-
 <body class="bg-color-white">
     <header>
         <nav class="navbar nav-pills navbar-expand-md navbar-dark fixed-top">
-            <a class="navbar-brand text-white" href="#home"><i class="fab fa-angrycreative"
+            <a class="navbar-brand text-white" href="#home" aria-label="logo"><i class="fab fa-angrycreative"
                     style="font-size:3.5vw; margin-left:40%;"></i></a>
-            <a class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse"
-                data-target="#navbarSupport">
+            <button class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse"
+                data-target="#navbarSupport" aria-label="menu burger button">
                 <span class="d-block bg-color-white position-relative"> </span>
                 <span class="d-block bg-color-white position-relative"> </span>
                 <span class="d-block bg-color-white position-relative"> </span>
-            </a>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupport" style="text-shadow: .5px .5px 3px black;">
                 <ul class="navbar-nav ml-auto">
                     <li class="px-4 nav-item">
@@ -58,7 +57,6 @@
             </div>
         </nav>
     </header>
-
     <section id="home">
         <div class="position-relative text-center color-white" style="text-shadow: 2px 2px 10px black;">
             <img src="./images/manzara.jpg" class="w-100" alt="manzara">
@@ -113,7 +111,7 @@
         <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up">
             <p>BLOG</p>
         </div>
-        <div class="container">
+        <div id="imgGalery" class="container">
             <div class="row">
                 <div class="px-1 flex-column col-lg col-md-6">
                     <a href="http://127.0.0.1:5500/single.html">
