--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <div class="bordered-section text-center py-2 " data-aos="fade-up">
             CONTACT
         </div>
-        <div hidden id="form-wrap" class="position-relative">
+        <div id="form-wrap" class="position-relative">
             <form class="bg-white position-relative overflow-hidden">
                 <p>HELLO JANE,</p>
                 <label for="email">Your Message:</label>
@@ -358,7 +358,7 @@
             </div>
             <div class="footer_width iletisim">
                <h2>Contact</h2>
-               <lu>
+               <ul>
                    <li>
                        <span><i class="far fa-envelope"></i></span>
                        <a href="#">janedoe@gmail.com</a>
@@ -367,7 +367,7 @@
                     <span><i class="fas fa-phone-volume"></i></span>
                     <a href="#">000 0000 000</a>
                    </li>
-               </lu>
+                </ul>
             </div>
         </div>
         <div class="copy-rigth text-center font-weight-light ">
@@ -432,5 +432,6 @@
             $('.form2').empty();
         }
     </script>
+    <script src="deneme.js"></script>
 </body>
 </html>
