--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <!-- AOS LIB -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
-<body class="bg-color-white">
+
+<body class="bg-color-white" data-spy="scroll" data-target="#scrollspyNav" data-offset="2">
     <header>
-        <nav class="navbar nav-pills navbar-expand-md navbar-dark fixed-top">
+        <nav id="scrollspyNav" class="navbar nav-pills navbar-expand-md navbar-dark fixed-top">
             <a class="navbar-brand text-white" href="#home" aria-label="logo"><i class="fab fa-angrycreative"
                     style="font-size:3.5vw; margin-left:40%;"></i></a>
             <button class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse"
@@ -53,6 +54,9 @@
                     <li class="px-4 nav-item">
                         <a class="nav-link" href="#contact">İletişim</a>
                     </li>
+                    <li class="px-4 nav-item">
+                        <a class="nav-link" title="kullanıcı" href="#"><i class="fas fa-user-circle"></i></a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -73,7 +77,7 @@
     </section>
 
     <section id="about" class=" bg-color-white">
-        <div style="height: 4.5vw;"></div>
+        <div style="height: 4vw;"></div>
         <div class="bordered-section text-center color-dark-blue py-2 " data-aos="fade-up">
             <p>ABOUT</p>
         </div>
@@ -81,16 +85,19 @@
             <div class="row">
                 <div id="aboutText" data-aos="fade-up" class="col-sm-12 col-md-5 mr-md-5"
                     style="padding:10px 30px; line-height: 1.5; letter-spacing: .10rem;">
-                    <p style="text-indent: 3vw;">I am <strong>jane Doe</strong>, a travel photographer and writer who
+                    <p style="text-indent: 3vw;">I am <strong>jane Doe</strong>, a travel photographer and writer
+                        who
                         believes that images
                         and words have the power to inspire meaningful change. My photos of the great outdoors spark
                         curiosity and my social media channels and blog create a space for connection with people of
                         similar passions to this world and each other.
                     </p>
                     <br><br>
-                    <p style="text-indent: 3vw;">I am a <strong>Sony Alpha Ambassador</strong> based out of Los Angeles
+                    <p style="text-indent: 3vw;">I am a <strong>Sony Alpha Ambassador</strong> based out of Los
+                        Angeles
                         – but you’d be hard pressed to find me
-                        sharing the incredible diversity that exists on our planet, and the connection each one of us
+                        sharing the incredible diversity that exists on our planet, and the connection each one of
+                        us
                         has to it and to each other.
                     </p>
                 </div>
@@ -265,7 +272,8 @@
                         <img class="rounded-circle d-block mx-auto py-3 " src="./images/1.jpg" alt="First slide">
                         <h5 class="text-center color-white">Jane Doe</h5>
                         <div class="carousel-text py-2 pb-4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia animi accusamus itaque
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia animi accusamus
+                                itaque
                                 numquam, delectus, fugit commodi porro assumenda aliquid reprehenderit dignissimos
                                 placeat tempora.
                             </p>
@@ -304,7 +312,7 @@
     </section>
 
     <section id="contact">
-        <!-- <div style="height: 4.5vw;"></div> -->
+        <div style="height: 4.5vw;"></div>
         <div class="bordered-section text-center py-2 " data-aos="fade-up">
             CONTACT
         </div>
@@ -315,68 +323,69 @@
                 <textarea name="message" id="message" value="Your Message"></textarea>
                 <label for="name">Name:</label>
                 <input type="text" name="name" value="" id="name">
-                 <label for="email">Email:</label>
-                 <input type="text" name="email" value="" id="email">
-                 <input type="submit" name="submit" value="NOW, I SEND THANKS!">
+                <label for="email">Email:</label>
+                <input type="text" name="email" value="" id="email">
+                <input type="submit" name="submit" value="NOW, I SEND THANKS!">
             </form>
         </div>
-        
-        <div id="form-wrap2" class="form2 color-white">    
+
+        <div id="form-wrap2" class="form2 color-white">
             <form>
                 <p>HELLO JANE,</p>
                 <label for="email">Your Message:</label>
                 <textarea name="message2" id="message2" value="Your Message"></textarea>
                 <label for="name">Name:</label>
                 <input type="text" name="name2" value="" id="name2">
-                 <label for="email">Email:</label>
-                 <input type="text" name="email2" value="" id="email2">
-                 <input type="submit" name="submit2" value="NOW, I SEND THANKS!">
+                <label for="email">Email:</label>
+                <input type="text" name="email2" value="" id="email2">
+                <input type="submit" name="submit2" value="NOW, I SEND THANKS!">
             </form>
-        </div>         
-    </section>
-   <article>
-    <footer >
-    <div class="footer_info " >
-            <div class="footer_width about">
-                <h2>Links</h2>
-              <!-- <div class="social-media">  -->
-                  <ul>               
-                      <li><a href="#"><i class="fab fa-facebook m-3"  aria-label="facebook"></i></a></li> 
-                      <li><a aria-label="instagram" href="#"><i class="fab fa-instagram m-3"></i></a></li> 
-                      <li><a aria-label="twitter" href="#"><i class="fab fa-twitter m-3"></i></a></li>     
-                 </ul>  
-            <!-- </div> -->
-          </div>
-            <div class="footer_width link">
-               <h2>Quick Link</h2>
-               <ul>
-                   <li><a href="#">Ana Sayfa</a></li>
-                   <li><a href="#">Hakkında</a></li>
-                   <li><a href="#">Blog</a></li>
-                   <li><a href="#">İletişim</a></li>
-               </ul>
-            </div>
-            <div class="footer_width iletisim">
-               <h2>Contact</h2>
-               <ul>
-                   <li>
-                       <span><i class="far fa-envelope"></i></span>
-                       <a href="#">janedoe@gmail.com</a>
-                   </li>
-                   <li>
-                    <span><i class="fas fa-phone-volume"></i></span>
-                    <a href="#">000 0000 000</a>
-                   </li>
-                </ul>
-            </div>
         </div>
-        <div class="copy-rigth text-center font-weight-light ">
-            <p>
-                0 COPYRIGHT 2021 JANE DONE ALL RİGHTS RESERVED
-            </p>
-       </div> 
-    </footer>
-</article>
+    </section>
+
+    <article>
+        <footer>
+            <div class="footer_info ">
+                <div class="footer_width about">
+                    <h2>Links</h2>
+                    <!-- <div class="social-media">  -->
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook m-3" aria-label="facebook"></i></a></li>
+                        <li><a aria-label="instagram" href="#"><i class="fab fa-instagram m-3"></i></a></li>
+                        <li><a aria-label="twitter" href="#"><i class="fab fa-twitter m-3"></i></a></li>
+                    </ul>
+                    <!-- </div> -->
+                </div>
+                <div class="footer_width link">
+                    <h2>Quick Link</h2>
+                    <ul>
+                        <li><a href="#">Ana Sayfa</a></li>
+                        <li><a href="#">Hakkında</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">İletişim</a></li>
+                    </ul>
+                </div>
+                <div class="footer_width iletisim">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li>
+                            <span><i class="far fa-envelope"></i></span>
+                            <a href="#">janedoe@gmail.com</a>
+                        </li>
+                        <li>
+                            <span><i class="fas fa-phone-volume"></i></span>
+                            <a href="#">000 0000 000</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copy-rigth text-center font-weight-light ">
+                <p>
+                    0 COPYRIGHT 2021 JANE DONE ALL RİGHTS RESERVED
+                </p>
+            </div>
+        </footer>
+    </article>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -428,10 +437,12 @@
         });
     </script>
     <script>
-        function Sil(){
+        function Sil() {
             $('.form2').empty();
         }
     </script>
+
     <script src="deneme.js"></script>
 </body>
+
 </html>
