--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
     </section>
 
     <section id="contact">
-        <div style="height: 4.5vw;"></div>
+        
         <div class="bordered-section text-center py-2 " data-aos="fade-up">
             CONTACT
         </div>
         <div id="form-wrap" class="position-relative">
-            <form class="bg-white position-relative overflow-hidden">
+            <form class="bg-white">
                 <p>HELLO JANE,</p>
                 <label for="email">Your Message:</label>
                 <textarea name="message" id="message" value="Your Message"></textarea>
@@ -346,15 +346,13 @@
     <article>
         <footer>
             <div class="footer_info ">
-                <div class="footer_width about">
-                    <h2>Links</h2>
-                    <!-- <div class="social-media">  -->
+                <div class="footer_width about ">
+                    <h2>Links</h2>                  
                     <ul>
-                        <li><a href="#"><i class="fab fa-facebook m-3" aria-label="facebook"></i></a></li>
-                        <li><a aria-label="instagram" href="#"><i class="fab fa-instagram m-3"></i></a></li>
-                        <li><a aria-label="twitter" href="#"><i class="fab fa-twitter m-3"></i></a></li>
-                    </ul>
-                    <!-- </div> -->
+                        <li><a href="#"><i class="fab fa-facebook" aria-label="facebook"></i></a></li>
+                        <li><a aria-label="instagram" href="#"><i class="fab fa-instagram "></i></a></li>
+                        <li><a aria-label="twitter" href="#"><i class="fab fa-twitter "></i></a></li>
+                    </ul>                   
                 </div>
                 <div class="footer_width link">
                     <h2>Quick Link</h2>
@@ -369,7 +367,7 @@
                     <h2>Contact</h2>
                     <ul>
                         <li>
-                            <span><i class="far fa-envelope"></i></span>
+                            <span><i class="far fa-envelope "></i></span>
                             <a href="#">janedoe@gmail.com</a>
                         </li>
                         <li>
