--- a/single.html
+++ b/single.html
@@ -33,7 +33,7 @@
     <title>Single</title>
 </head>
 
-<body class="bg-color-grey">
+<body class="bg-color-white">
 
     <header>
         <nav class="navbar nav-pills navbar-expand-md navbar-dark fixed-top">
@@ -68,11 +68,12 @@
     </header>
     <div class="container-fluid mt-5 pt-3 ">
         <div class="row">
-            <h3 class="text-capitalize col-12 text-white m-3 ">Atina</h3>
-            <img src="./images/atina.jpg" class="img-fluid col-12 col-sm-6 " alt="">
+            <!-- <h3 class="text-capitalize col-12 text-dark m-3 ">Atina</h3> -->
+            <img src="./images/atina.jpg" class="img-fluid col-12 col-sm-6  pt-3" alt="">
 
-            <article class="col-12 col-sm-6 text-white pt-3 " style="text-indent: 3vw; ">
-                <div> Atina, Yunanistan’ın başkenti ve en büyük kentidir. 3400 yılı aşkın kayıtlı tarihi ile dünyanın en
+            <article class="col-12 col-sm-6 text-dark pt-3 " >
+                <div>ATİNA</div>
+                <div class="pt-2"> Atina, Yunanistan’ın başkenti ve en büyük kentidir. 3400 yılı aşkın kayıtlı tarihi ile dünyanın en
                     eski
                     şehirlerinden biridir. Antik Atina şehri denizi olmayan güçlü bir şehir devletiydi. Denizle
                     bağlantısını
@@ -94,7 +95,7 @@
     </div>
 
     <section id="comments" class="my-5">
-        <div id="commentHolder" class="container color-white">
+        <div id="commentHolder" class="container color-grey">
             <button class="btn btn-primary my-2" data-toggle="collapse" data-target="#commentCollapse"
                 aria-expanded="false" aria-controls="commentCollapse">
                 Yorum yap
@@ -137,32 +138,45 @@
     <div class="copyright">
         <div class="container">
             <div class="row">
-                <div class="col text-left text-uppercase">
-                    0 COPYRIGHT 2021 JANE DONE ALL RİGHTS RESERVED
+                <div class="footer_width about">
+                    <h2>Links</h2>
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook" aria-label="facebook"></i></a></li>
+                        <li><a aria-label="instagram" href="#"><i class="fab fa-instagram "></i></a></li>
+                        <li><a aria-label="twitter" href="#"><i class="fab fa-twitter "></i></a></li>
+                    </ul>
                 </div>
-                <div class="col text-right">
-                    <ul class="list-unstyled">
+                <div class="footer_width link">
+                    <h2>Quick Link</h2>
+                    <ul>
+                        <li><a href="#">Ana Sayfa</a></li>
+                        <li><a href="#">Hakkında</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">İletişim</a></li>
+                    </ul>
+                </div>
+                <div class="footer_width iletisim">
+                    <h2>Contact</h2>
+                    <ul>
                         <li>
-                            <a href="#"><i class="fab fa-facebook m-2" aria-label="facebook"></i></a>
+                            <span><i class="far fa-envelope"></i></span>
+                            <a href="#">janedoe@gmail.com</a>
                         </li>
                         <li>
-                            <a aria-label="instagram" href="#"><i class="fab fa-instagram m-2"></i></a>
-                        </li>
-                        <li>
-                            <a aria-label="twitter" href="#"><i class="fab fa-twitter m-2"></i></a>
+                            <span><i class="fas fa-phone-volume"></i></span>
+                            <a href="#">000 0000 000</a>
                         </li>
                     </ul>
                 </div>
+            <div class="abc font-weight-light ">
+                <p>
+                    0 COPYRIGHT 2021 JANE DONE ALL RİGHTS RESERVED
+                </p>
+            </div>
             </div>
         </div>
     </div>
-    <!-- <footer >                     
-      <div class="copy-rigth text-center font-weight-light ">
-            <p>
-                0 COPYRIGHT 2021 JANE DONE ALL RİGHTS RESERVED
-            </p>
-       </div> 
-    </footer> -->
+    
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
