--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="#contact">İletişim</a>
                     </li>
                     <li class="px-4 nav-item">
-                        <a class="nav-link" title="kullanıcı" href="#"><i class="fas fa-user-circle"></i></a>
+                        <a class="nav-link" title="kullanıcı" href="http://127.0.0.1:5500/login.html#"><i class="fas fa-user-circle"></i></a>
                     </li>
                 </ul>
             </div>
@@ -342,48 +342,47 @@
             </form>
         </div>
     </section>
-
-    <article>
-        <footer>
-            <div class="footer_info ">
-                <div class="footer_width about ">
-                    <h2>Links</h2>                  
-                    <ul>
-                        <li><a href="#"><i class="fab fa-facebook" aria-label="facebook"></i></a></li>
-                        <li><a aria-label="instagram" href="#"><i class="fab fa-instagram "></i></a></li>
-                        <li><a aria-label="twitter" href="#"><i class="fab fa-twitter "></i></a></li>
-                    </ul>                   
-                </div>
-                <div class="footer_width link">
-                    <h2>Quick Link</h2>
-                    <ul>
-                        <li><a href="#">Ana Sayfa</a></li>
-                        <li><a href="#">Hakkında</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">İletişim</a></li>
-                    </ul>
-                </div>
-                <div class="footer_width iletisim">
-                    <h2>Contact</h2>
-                    <ul>
-                        <li>
-                            <span><i class="far fa-envelope "></i></span>
-                            <a href="#">janedoe@gmail.com</a>
-                        </li>
-                        <li>
-                            <span><i class="fas fa-phone-volume"></i></span>
-                            <a href="#">000 0000 000</a>
-                        </li>
-                    </ul>
-                </div>
+  <article>
+   <footer>
+    <div class="container">
+    <div class="row justify-content-center align-items-center">
+    <div class="abc">
+        <div class="contactUs">
+            <h2 style="color: #fff;"> Contact Us</h2>
+             <p>23 Main,Street</p>
+            <p>New York,United States</p>
+            <p>00000000000000</p>
+            <p>asdfgh@gmail.com</p>
+        </div>
+        <div class="link">
+            <h2 style="color: #fff;">Quick Links</h2>
+            <p><a href="#">Ana Sayfa</a></p>
+            <p><a href="#">Hakkında</a></p>
+            <p><a href="#">Blog</a></p>  
+            <p><a href="#">İletişim</a></p>  
+        </div>    
+        <div class="social-media ">  
+        <h2 style="color: #fff;">Social Media</h2>          
+                <ul>
+                    <li><a href="#"> <i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"> <i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"> <i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"> <i class="fab fa-google-plus-g"></i></a></li>
+                    <li><a href="#"> <i class="fab fa-youtube"></i></a></li>
+                </ul>
             </div>
-            <div class="copy-rigth text-center font-weight-light ">
-                <p>
-                    0 COPYRIGHT 2021 JANE DONE ALL RİGHTS RESERVED
-                </p>
-            </div>
-        </footer>
-    </article>
+        </div>
+    </div>
+</div>
+    <hr class="bg-color-white border: 2px;">
+    <div class="container ">
+     <h4 class="font-weight-light " style="text-align:center ;">Copyright 2021 All rights reserved </h4>
+    </div>
+    <br> 
+ 
+   </footer>
+</article>
+    
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
