--- a/admin.html
+++ b/admin.html
@@ -45,7 +45,7 @@
                     <div class="collapse" id="commentCollapse">
                             <form>
                                 <div class="form-group">
-                                    <textarea class="form-control bg-transparent color-white" id="commentTextArea"
+                                    <textarea class="form-control bg-transparent color-white" id="notearea"
                                         placeholder="not ekle" rows="3"></textarea>
                                 </div>
                             </form>
@@ -79,6 +79,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+        <!-- js -->
+    <script src="admin.js"></script>
 </body>
 
 </html>
